syntax = "proto3";

package inventory;

service InventoryService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc GetBook (GetBookRequest) returns (GetBookResponse);
}

message CreateBookRequest {
  Book book = 1;
}

message CreateBookResponse {
  string isbn = 1;
}

message GetBookRequest {
  string isbn = 1;
}

message GetBookResponse {
  string isbn = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
  int32 publishing_year = 5;
}

message Book {
  string isbn = 1;
  string title = 2;
  string author = 3;
  enum GenreType {
    THRILLER = 0;
    COMEDY = 1;
    TRAGIC = 2;
  };
  GenreType genre = 4;
  int32 publishing_year = 5;
}

message InventoryItem {
  int32 inventory_number = 1;
  oneof item {
    Book book = 2;
  }
  enum StatusType {
    AVAILABLE = 0;
    TAKEN = 1;
  }
  StatusType status = 3;
}